applications/authentication/kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: authentication
    labels:
        app: api
        version: v1
        service: authentication
spec:
    replicas: 1
    selector:
        matchLabels:
            app: api
            version: v1
            service: authentication
    template:
        metadata:
            annotations:
                sidecar.istio.io/inject: "true"
            labels:
                app: api
                version: v1
                service: authentication
        spec:
            containers:
                -   name: authentication
                    livenessProbe:
                        httpGet:
                            port: http
                            path: /health
                        initialDelaySeconds: 10
                        periodSeconds: 15
                    image: localhost:5050/authentication:latest
                    resources:
                        requests:
                            cpu: "100m"
                    imagePullPolicy: Always
                    ports:
                        -   containerPort: 5000
                            name: http
