applications/authentication/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: authentication # --> authentication.<namespace>.svc.cluster.local
    labels:
        app: api
        version: v1
        service: authentication
spec:
    selector:
        app: api
        version: v1
        service: authentication
    ports:
        -   port: 80
            targetPort: 5000
            name: http

#---
#apiVersion: autoscaling/v2
#kind: HorizontalPodAutoscaler
#metadata:
#    name: gateway
#spec:
#    # Match the generated Deployment by reference
#    # Note: Do not use `kind: Gateway`.
#    scaleTargetRef:
#        apiVersion: apps/v1
#        kind: Deployment
#        name: gateway-istio
#    minReplicas: 2
#    maxReplicas: 5
#    metrics:
#        - type: Resource
#          resource:
#              name: cpu
#              target:
#                  type: Utilization
#                  averageUtilization: 50
#---
#apiVersion: policy/v1
#kind: PodDisruptionBudget
#metadata:
#    name: gateway
#spec:
#    minAvailable: 1
#    selector:
#        # Match the generated Deployment by label
#        matchLabels:
#            gateway.networking.k8s.io/gateway-name: gateway
