applications/authentication/kustomize/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: authentication
    labels:
        sidecar.istio.io/inject: "true"
spec:
    parentRefs:
        -   name: api-ingress-gateway
            kind: Gateway
    rules:
        -   matches:
                -   path:
                        type: PathPrefix
                        value: /v1/authentication
            backendRefs:
                -   name: authentication
                    kind: Service
                    port: 80
